src/app/aboutUs/aboutUs.module.scss
.aboutUs {
	display: flex;
	flex-direction: column;
	width: 100%;
	height: 100vh;
	margin: 0 auto;
	padding: 0 80px 75px 80px;
	position: relative;

	&__rectangle {
		position: absolute;
		top: 0;
		left: 50%;
		transform: translateX(-50%);
		height: 96px;
		width: 80%;
		background-color: var(--rectangle-about);
		border-bottom-left-radius: 67px;
		border-bottom-right-radius: 67px;
	}

	&__header {
		margin-bottom: 98px;
		z-index: 0;
	}

	&__content {
		display: flex;
		justify-content: space-between;
	}

	&__block {
		display: flex;
		flex-direction: column;
		gap: 42px;
		position: relative;
	}

	&__title {
		width: 100%;
		max-width: 765px;
		font-weight: 700;
		font-size: 128px;
		text-transform: uppercase;

		&::after {
			display: block;
			content: "";
			width: 100%;
			height: 5px;
			background-color: var(--pure-black);
		}
	}

	&__scrollContainer {
		display: flex;
		flex-direction: row;
		position: relative;
	}

	&__scrollbar {
		width: 5px;
		height: 907px;
		background-color: var(--pure-black);
		margin-right: 197px;
		border-radius: 10px;
		box-shadow: inset 0 0 0 1.5px var(--pure-black);
	}

	&__info {
		width: 100%;
		max-width: 786px;
		height: 907px;
		overflow-y: scroll;
		font-family: Noto Sans;
		font-weight: 500;
		font-size: 42px;
		scrollbar-width: none;

		&::-webkit-scrollbar {
			display: none;
		}
	}
}

